Let `ProcessBuilder` do the IO redirection
No need to create two threads for it.